<resources>
    <string name="app_name">SapienzaAddFace</string>
    <string name="subscription_key">2582b9f1e2c24202b8de06cc4126a485</string>
    <string name="service_host">https://westeurope.api.cognitive.microsoft.com/face/v1.0</string>
    <string name="button_gallery">Gallery</string>
    <string name="button_camera">Camera</string>
    <string name="button_save">Save</string>
    <string name="progress_dialog_title">Please Wait</string>
    <string name="addFaceHint">Select an image from camera or gallery, then tap to a desired face to add it to the database.</string>
    <string name="addFaceButton">Add Face</string>
    <string name="deleteHint">Long-tap an image to delete it.</string>
    <string name="mainPage_or">OR</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="hintPass">Password</string>
    <string name="hintEmail">E-mail</string>
    <string name="alreadyRegistered">Already Registered? Sign in!</string>
    <string name="registerText">Register</string>
    <string name="passwordText">Password</string>
    <string name="emailText">E-mail</string>
    <string name="i_forgot_password">Forgot my password</string>
    <string name="name_hint">Name</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="submit_link">Submit New Password Link</string>
    <string name="send_otp">Add Fingerprint</string>
    <string name="resend_otp_formatted">Adding Fingerprint (%1$d)</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="stop">Stop</string>
    <string name="fingerprint_hint">Please put your finger to the fingerprint reader before the timer expires</string>
    <string name="settings_hint">Please refer to the manual to see your fingerprint reader ID</string>
    <string name="device_id_hint">Device ID</string>
    <string name="save_device_id">Save Device ID</string>
</resources>
