<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#FFF">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:hint="@string/hintEmail"
            android:id="@+id/loginEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:id="@+id/loginPassword"
            android:hint="@string/hintPass" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:text="@string/login_text"
                android:id="@+id/LoginButton"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:textColor="#FFFF"
                android:textAllCaps="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorAccent"/>

            <Button
                android:text="@string/register_text"
                android:id="@+id/RegisterButton"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="#FFFF"
                android:background="@color/colorAccent"/>
        </LinearLayout>
        <Button
            android:text="@string/i_forgot_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:id="@+id/newPassword"
            android:background="@null"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainPage_or"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>