<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal"
        android:background="#FFF"
        >


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="266dp"
            android:layout_height="272dp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:hint="@string/emailText"
            android:id="@+id/mailText" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:id="@+id/PasswordText"
            android:hint="@string/passwordText" />


        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/black"
            android:text="@string/registerText"
            />


        <Button
            android:text="@string/alreadyRegistered"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:id="@+id/loginPageButton"
            android:background="@null"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>